Fix TaskDetails z-index

--- a/src/assets/styles/cmps/_TaskAction.scss
+++ b/src/assets/styles/cmps/_TaskAction.scss
@@ -14,7 +14,7 @@
     gap: em(14);
 
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    z-index: 2;
+    z-index: 1001;
 
     &>* {
         font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
